# pirate

./: .buildinfo  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  _grpc_generated.html  autogenerate_kernel.py  cli.html  debug_autogenerated_kernel.py  environment.yml  environment_dev.yml  environment_minimal.yml  formats.html  genindex.html  index.html  llm_context.html  makefile_helper.py  objects.inv  pyproject.toml  python_class_reference.html  search.html  searchindex.js  time_dedisperser.py  vendorize.py
.cursor/: rules.md  yaml.md
_sources/: _grpc_generated.md.txt  formats.md.txt  index.md.txt
classes/: Acquisition.html  AssembledFrame.html  DedispersionConfig.html  FrbGrouper.html  FrbSearchClient.html  FrbSifterClient.html  FrbSifterEvents.html  GpuDedisperser.html  GpuDedisperserOutputs.html  OfflineDedisperser.html  XEngineMetadata.html
cli/: check_avar_approximation.html  check_avar_mc.html  hwtest.html  make_subbands.html  random_kernels.html  revisit_512gb.html  rpc_cancel_stream.html  rpc_rand_write.html  rpc_show_streams.html  rpc_start_stream.html  rpc_status.html  run_fake_xengine.html  run_offline_dedisperser.html  run_server.html  run_toy_grouper.html  run_toy_sifter.html  scratch.html  show_asdf.html  show_dedisperser.html  show_file_format.html  show_hardware.html  show_kernels.html  show_random_config.html  show_xengine_metadata.html  test.html  test_simpulse.html  time.html  time_dedisperser.html
configs/: README.html  README.md  asdf_header.yml  asdf_header.yml.html  example_asdf_header.yml  example_asdf_header.yml.html  example_dedispersion_plan.yml  example_dedispersion_plan.yml.html  xengine_metadata.yml  xengine_metadata.yml.html
docs/: README.md  deploy.sh
future/: BeamformerConfig.hpp  ChunkPool.cpp
grpc/: README.md  finalize_grpc_stubs.py  frb_grouper.proto  frb_grouper.proto.html  frb_search.proto  frb_search.proto.html  frb_sifter.proto  frb_sifter.proto.html  wrap_ndebug.py
misc/: analytic_variance.py  asdf_cxx_config.hxx  code_review_notes.txt  (+6 more)
(+585 files in other folders)
