[project]
name = 'pirate_frb'
version = '1.0.0'
dependencies = [ 'pybind11', 'numpy', 'ksgpu >= 1.1.0' ]
description = 'Perimeter Institute RAdio Transient Engine'
requires-python = '>=3.8'
# readme = 'README.md'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

[build-system]
build-backend = 'pipmake'
requires = [ 'pipmake >= 0.0.2', 'pybind11', 'numpy', 'ksgpu >= 1.0.3' ]

# NOTE: cupy is not a dependency, but may be in the future.
