[project]
name = 'pirate_frb'
version = '1.3.0'
dependencies = [ 'pybind11', 'numpy', 'editables', 'ksgpu >= 1.3.0', 'argcomplete' ]
description = 'Perimeter Institute RAdio Transient Engine'
requires-python = '>=3.8'
# readme = 'README.md'
# license = {file = 'LICENSE.txt'}
# authors = [ {name = 'Kendrick Smith', email = 'kmsmith@perimeterinstitute.ca'} ]

[project.optional-dependencies]
docs = [
    'sphinx >= 7.0',
    'furo >= 2024.0',
    'myst-parser >= 2.0',
    'sphinxcontrib-argparse >= 0.4.0',
]

[project.scripts]
pirate_frb = "pirate_frb.__main__:main"

[build-system]
build-backend = 'pipmake'
requires = [ 'pipmake >= 0.0.3', 'pybind11', 'numpy', 'editables', 'ksgpu >= 1.3.0' ]

# NOTE: I decided not to specify 'cupy' as a dependency, in order to avoid triggering
# a pip install of cupy (since cupy is difficult to install with pip but straightforward
# with other tools, e.g. conda).

